--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<title>Login</title>
-	<!-- Link to external css file -->
+<!-- Link to external Bootstrap file -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+ <!-- Link to Stylesheet !-->
 <link rel='stylesheet' href='/style.css'/>
-<!-- Google Fonts -->
+<!-- Link to Google Fonts !-->
+<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 
-</head>
 <body>
 <h1>Login</h1>
+
 <form name="login" method="POST" action="/login">
 <br><br>
 <label>Username:<input type="text" name="username" autofocus></label><br><br>
@@ -17,4 +21,5 @@
 </form>
 </body>
 </html>
+
 
