--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,14 @@
 <html>
 <head>
 <title>Home</title>
-
+<!-- Link to external Bootstrap file -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+ <!-- Link to Stylesheet !-->
+<link rel='stylesheet' href='/style.css'/>
+<!-- Link to Google Fonts !-->
+<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+<!--Google Maps!-->
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
@@ -37,24 +44,63 @@ function codeAddress() {
 
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-
-<!-- Link to Stylesheet !-->
-<link rel='stylesheet' href='/style.css' />
 </head>
-
 <body>
-<div id="header">
-<center><h1>Photograph Finder</h1></div></center>
-<!-- NavBar !-->
-<div id="nav">
-<h2><% if(user) { %>
-<%= user.username %>
-<% }%></h2>
-<br><br><a href="./login">LOGIN</a><br><br>
-<br><br><a href="./logout">LOGOUT</a><br><br>
-<br><br><a href="./posts/new">Create New Photo Post</a><br><br><br><br>
-</div>
+<center><h1>Photo Finder</h1></center>
+ <!-- Bootstrap Navbar -->
+    <nav role="navigation" class="navbar navbar-default">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+
+        <div class="navbar-header">
+
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+
+                <span class="sr-only">Toggle navigation</span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+            </button>
+        </div>
+
+        <!-- Collection of nav links and other content for toggling -->
+
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+
+            <ul class="nav navbar-nav">
+
+                <li class="active"><a href="/">Home</a></li>
+                <% if(user) { %>
+								<%= user.username %>
+                <li><a href="./posts/<%= images[0].id %>/edit">Edit</a></li>
+                <li><a href="./logout">Logout</a></li>
+                <% } else { %>
+                <li><a href="./login">Login</a></li>
+                <% } %>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+            		<% if(user) { %>
+                <li>
+                	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
+  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button></a>
+                <% } else { %>
+            <li><a href="./users/signup">Sign Up!</a></li>               
+							</li><% } %>
+
+            </ul>
+
+        </div>
+
+    </nav>
+
+
 <!-- Slider !-->
+<div>
 <center><ul class="slides">
     <input type="radio" name="radio-btn" id="img-1" checked />
     <li class="slide-container">
@@ -144,5 +190,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </div>
     <div id="map-canvas"></div>
 </center>
+</div>
 </body>
 </html> 
