--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,19 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Link to external css file -->
-<link rel='stylesheet' href='/style.css' />
-<!-- Google Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Orbitron:500' rel='stylesheet' type='text/css'>
+<!-- Link to external Bootstrap file -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		 <!-- Link to Stylesheet !-->
+		<link rel='stylesheet' href='/style.css'/>
+		<!-- Link to Google Fonts !-->
+		<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>Edit <%= posts.title %></h1>
-<form method="POST" action="/posts/<%= posts.id %>?_method=PATCH">
-	<input type="text" name="author" placeholder="Author" value="<%= posts.author %>"><br><br>
-	<input type="text" name="title" placeholder="Title" value="<%= posts.title %>"><br><br>
-	<textarea rows="40" cols="100" name="body"></textarea><br><br>
-	<input type="submit">
-</form>
+	<h1>Edit <%= images.title %></h1>
+	 <!-- Bootstrap Navbar -->
+    <nav role="navigation" class="navbar navbar-default">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+
+        <div class="navbar-header">
+
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+
+                <span class="sr-only">Toggle navigation</span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+            </button>
+        </div>
+
+        <!-- Collection of nav links and other content for toggling -->
+
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+
+            <ul class="nav navbar-nav">
+
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="./logout">Logout</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
+  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button></a>
+            </ul>
+
+        </div>
+
+    </nav>
+
+	<form method="POST" action="/posts/<%= images.id %>?_method=PATCH">
+		<input type="text" name="loction" placeholder="Image Source" value="<%= images.imagesource %>"><br><br>
+		<input type="text" name="loction" placeholder="Location" value="<%= images.location %>"><br><br>
+		<input type="text" name="title" placeholder="Title" value="<%= images.title %>"><br><br>
+ 		<button type="submit" class="btn btn-success btn-lg">Submit</button>
+	</form>
 </body>
 </html>
