--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,24 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Link to external css file -->
-<link rel='stylesheet' href='/style.css' />
-<!-- Google Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Orbitron:500' rel='stylesheet' type='text/css'>
+<!-- Link to external Bootstrap file -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+ <!-- Link to Stylesheet !-->
+<link rel='stylesheet' href='/style.css'/>
+<!-- Link to Google Fonts !-->
+<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 	<title>Welcome!</title>
 </head>
 <body>
 <h1><strong>Photo Post</strong></h1>
+ <!-- Bootstrap Navbar -->
+    <nav role="navigation" class="navbar navbar-default">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+
+        <div class="navbar-header">
+
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+
+                <span class="sr-only">Toggle navigation</span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+            </button>
+        </div>
+
+        <!-- Collection of nav links and other content for toggling -->
+
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+
+            <ul class="nav navbar-nav">
+
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="./logout">Logout</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
+  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button></a>
+            </ul>
+
+        </div>
+
+    </nav>
+<form>
 <ul>
-	<% for (var i = 0; i < posts.length; i++) { %>
+	<% for (var i = 0; i < images.length; i++) { %>
 	<li>
-	<a href="/posts/<%= posts[i].id %>">
-	<%= posts[i].title %></li>
+	<a href="/posts/<%=images[i].id %>">
+	<%= images[i].title %></li>
 <% } %>
 </ul>
 <div>
 <a href="/posts/new">Add Post</a>
 </div>
+</form>
 </body>
 </html>
