--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,32 +1,121 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Link to external css file -->
-<link rel='stylesheet' href='/style.css'/>
-<!-- Google Fonts -->
-<!-- <link href='http://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Orbitron:500' rel='stylesheet' type='text/css'>
- -->
+  <title>New Photo Post!</title>
+   <!-- Link to Stylesheet !-->
+  <link rel='stylesheet' href='/style.css'/>
+  <!-- Link to external Bootstrap file -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <!-- Link to Google Fonts !-->
+  <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+  <!--Google Maps!-->
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<meta charset="utf-8">
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+<script>
+var geocoder;
+var map;
+// Initializes Map
+function initialize() {
+  geocoder = new google.maps.Geocoder();
+  var latlng = new google.maps.LatLng(37.7749295, -122.4194155);
+  var mapOptions = {
+    zoom: 7,
+    center: latlng
+  }
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+}
+// Geocodes Address
+function codeAddress() {
+  var address = document.getElementById('address').value;
+  geocoder.geocode( { 'address': address}, function(results, status) {
+    if (status == google.maps.GeocoderStatus.OK) {
+      map.setCenter(results[0].geometry.location);
+      var marker = new google.maps.Marker({
+          map: map,
+          position: results[0].geometry.location
+      });
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status);
+    }
+  });
+}
 
-	<title>New Picture Post!</title>
+google.maps.event.addDomListener(window, 'load', initialize);
+google.maps.event.addEventListener(onclick, 'load', initialize);
+</script>
+
+<script type="text/javascript">
+// Callback for Photo Location
+var geocoder = new google.maps.Geocoder();
+window.getCoordinates = function (address, callback){
+  var coordinates;
+  geocoder.geocode({address: address}, function(results, status)
+    coordinates = results[0].geometry.location;
+    callback(coordinates);
+  })
+}
+//
+</script>
 </head>
 <body>
-<h1 id="new">Add a new Picture post!</h1>
-<form method="POST" action="/posts">
-	<input type="text" name="title" placeholder="Title"><br><br>
-	<input type="text" name="location" placeholder="Location"><br><br>
-	<!-- Image Upload form !-->
-	<div id="ImageUpload" class="">
-    <form action="uploadImages.php" method="post" onsubmit="return validateUploadFile();" enctype="multipart/form-data" >
-    <p><input type="hidden" name="MAX_FILE_SIZE" value="100000" /></p>
-      <div class="uploadFileprompt">
-        <div class="span_left">Image 1 upload - Max. 100kb</div>
-        <div class="span_right"><input type="file" name="txtUploadFile[]"/></div>
-      </div>
-	</div>
-	<br><br>
-	<textarea rows="20" cols="100" name="body">Comments</textarea><br><br>
-	<input type="submit" value="Submit">
-</form>
+  <h1 id="newH1">Add a new Photo post!</h1>
+  <!-- Bootstrap Navbar -->
+  <nav role="navigation" class="navbar navbar-default">
+
+  <!-- Brand and toggle get grouped for better mobile display -->
+
+  <div class="navbar-header">
+
+    <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+
+    <span class="sr-only">Toggle navigation</span>
+
+    <span class="icon-bar"></span>
+
+    <span class="icon-bar"></span>
+
+    <span class="icon-bar"></span>
+
+  </button>
+  </div>
+
+  <!-- Collection of nav links and other content for toggling -->
+
+  <div id="navbarCollapse" class="collapse navbar-collapse">
+
+    <ul class="nav navbar-nav">
+
+      <li class="active"><a href="/">Home</a></li>
+      <li><a href="./logout">Logout</a></li>
+    </ul>
+  </li>
+
+  </ul>
+
+  </div>
+
+  </nav>
+  <form role="form" action="/posts" method="POST">
+    <div class="form-group">
+    <!-- <label for="exampleInputFile"> Uploaded Image Source</label>
+    <input type="file" name="imagesource" id="exampleInputFile">
+    </div><br><br> -->
+    <label for="exampleInputLocation">Image Source</label>
+      <input type="text" class="form-control" name="imagesource" id="exampleInputImageSource" placeholder="Enter http location of image"><br><br>
+      <label for="exampleInputLocation">Location</label>
+      <input type="text" class="form-control" name="location" id="exampleInputLocation" placeholder="Enter location"><br><br>
+      <label for="exampleInputPhotoLocation">Title</label>
+      <input type="text" class="form-control" name="title" id="exampleInputEmail1" placeholder="Enter title"><br><br>
+      <button type="submit" class="btn btn-success btn-lg">Submit</button>
+    </div>
+  </form>
+  <!-- Google Map !-->
+    <center>
+      <input id="address" type="textbox" value="Oakland, CA">
+      <input type="button" value="Geocode" onclick="codeAddress()">
+    </div>
+    <div id="map-canvas"></div>
 </body>
 </html>
