--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,190 @@
 <html>
 <head>
 <title>Home</title>
+<style type="text/css">
+  /*
+
+* Based on Cover by https://twitter.com/mdo"  @mdo
+* added cover image and background color to match (green)
+*
+* Globals
+
+*/
+
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+
+
+/*
+ * Base structure
+ */
+
+html,
+body {
+/*css for full size background image*/
+  background: url(http://hdwallpapersearly.com/wp-content/uploads/2014/10/camera-lens-wallpaper-3-600x375.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
+  height: 100%;
+  background-color: #060;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+ 
+}
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+}
+.cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 30px;
+}
+
+
+/*
+ * Header
+ */
+.masthead-brand {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.masthead-nav > li {
+  display: inline-block;
+}
+.masthead-nav > li + li {
+  margin-left: 20px;
+}
+.masthead-nav > li > a {
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff; /* IE8 proofing */
+  color: rgba(255,255,255,.95);
+  border-bottom: 2px solid transparent;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 768px) {
+  .masthead-brand {
+    float: left;
+  }
+  .masthead-nav {
+    float: right;
+  }
+}
+
+
+/*
+ * Cover
+ */
+
+.cover {
+  padding: 0 20px;
+}
+.cover .btn-lg {
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+
+/*
+ * Footer
+ */
+
+.mastfoot {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5);
+}
+
+
+/*
+ * Affix and center
+ */
+
+@media (min-width: 768px) {
+  /* Pull out the header and footer */
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+
+@media (min-width: 992px) {
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 700px;
+  }
+}
+
+</style>
 <!-- Link to external Bootstrap file -->
+<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
- <!-- Link to Stylesheet !-->
-<link rel='stylesheet' href='/style.css'/>
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
 <!-- Link to Google Fonts !-->
 <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
@@ -13,183 +193,83 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-<script>
-var geocoder;
-var map;
-// Initializes Map
-function initialize() {
-  geocoder = new google.maps.Geocoder();
-  var latlng = new google.maps.LatLng(37.7749295, -122.4194155);
-  var mapOptions = {
-    zoom: 7,
-    center: latlng
-  }
-  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-}
-// Geocodes Address
-function codeAddress() {
-  var address = document.getElementById('address').value;
-  geocoder.geocode( { 'address': address}, function(results, status) {
-    if (status == google.maps.GeocoderStatus.OK) {
-      map.setCenter(results[0].geometry.location);
-      var marker = new google.maps.Marker({
-          map: map,
-          position: results[0].geometry.location
-      });
-    } else {
-      alert('Geocode was not successful for the following reason: ' + status);
-    }
-  });
-}
 
-google.maps.event.addDomListener(window, 'load', initialize);
-</script>
 </head>
 <body>
-<center><h1>Photo Finder</h1></center>
- <!-- Bootstrap Navbar -->
-    <nav role="navigation" class="navbar navbar-default">
+<div class="site-wrapper">
+  <div class="site-wrapper-inner">
+    <div class="cover-container">
+      <div class="masthead clearfix">
+        <div class="inner">
+          <h3 class="masthead-brand">Photo Finder</h3>
 
-        <!-- Brand and toggle get grouped for better mobile display -->
-
-        <div class="navbar-header">
-
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-
-                <span class="sr-only">Toggle navigation</span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-
-            </button>
+          <ul class="nav masthead-nav">
+            <% if(user) { %>
+            <%= user.name %>
+            <li>
+              <form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+                <div class="form-group">
+                <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</button>
+                </div>
+                </form>
+            </li>
+            <li>
+              <a href="./posts"> <button type="button" class="btn btn-info btn-lg">
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Posts</button></a></li>
+              <li>
+                <a href="./showall"> <button type="button" class="btn btn-warning btn-lg">
+                <span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Show All Photos</button>
+                </a>
+              </li>
+            <% } else { %>
+              <li>
+                <a href="./users/login"><button type="button" class="btn btn-warning btn-lg">
+                <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</button>
+                </a>
+              </li>
+            <% } %>
+          </ul>
         </div>
+      </div>
 
-        <!-- Collection of nav links and other content for toggling -->
+      <div class="inner cover">
+        <h1 class="cover-heading">Welcome...</h1>
 
-        <div id="navbarCollapse" class="collapse navbar-collapse">
+        <p class="lead">Photo Finder is an app that displays photographs from all over the world in a clean, simple format. Sign up and check some out or post photos of your own.</p>
 
-            <ul class="nav navbar-nav">
+        <p class="lead">
+        <% if(user) { %>
+        <a href="./posts/new"><button type="button" class="btn btn-primary btn-lg">
+  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Upload Photo</button></a>
+        <% } else { %>
+        <a class="btn btn-lg btn-info" href="./users/signup"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>Sign Up</a>
+         <% } %>
+        </p>
+      </div>
 
-                <li class="active"><a href="/">Home</a></li>
-                <% if(user) { %>
-								<%= user.username %>
-                <li><a href="./posts/<%= images[0].id %>/edit">Edit</a></li>
-                <li><a href="./logout">Logout</a></li>
-                <% } else { %>
-                <li><a href="./login">Login</a></li>
-                <% } %>
-            </ul>
+      <div class="mastfoot">
+        <div class="inner">
+          <!-- Validation -->
 
-            <ul class="nav navbar-nav navbar-right">
-            		<% if(user) { %>
-                <li>
-                	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
-  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button></a>
-                <% } else { %>
-            <li><a href="./users/signup">Sign Up!</a></li>               
-							</li><% } %>
+          <p><a href=
+          "http://validator.w3.org/check?uri=http%3A%2F%2Fbootsnipp.com%2Fiframe%2Fg6GWQ"
+          target="_blank"><small>HTML</small><sup>5</sup></a></p>
+          
+          
+          <p><a href=
+          "https://github.com/twbs/bootlint"
+          target="_blank"><small>Checked with Bootlint</small></a></p>          
+      
+          
 
-            </ul>
-
+          <p>© 2014 Nic Boutte ~ <a href=
+          "http://getbootstrap.com/">Bootstrap</a></p>
         </div>
-
-    </nav>
-
-
-<!-- Slider !-->
-<div>
-<center><ul class="slides">
-    <input type="radio" name="radio-btn" id="img-1" checked />
-    <li class="slide-container">
-		<div class="slide">
-			<img src="http://i820.photobucket.com/albums/zz125/josephb555/northern-lights.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-6" class="prev">&#x2039;</label>
-			<label for="img-2" class="next">&#x203a;</label>
-		</div>
-    </li>
-
-    <input type="radio" name="radio-btn" id="img-2" />
-    <li class="slide-container">
-        <div class="slide">
-        <!-- Should be user input !-->
-          <img src="http://i65.photobucket.com/albums/h235/Ignwar/Album%20Forces%20of%20Nature/AuroralPillars.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-1" class="prev">&#x2039;</label>
-			<label for="img-3" class="next">&#x203a;</label>
-		</div>
-    </li>
-
-    <input type="radio" name="radio-btn" id="img-3" />
-    <li class="slide-container">
-        <div class="slide">
-         <!-- Should be user input !-->
-          <img src="http://i42.photobucket.com/albums/e310/Morgoth_Bauglir/3259217139_eae935e404_b.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-2" class="prev">&#x2039;</label>
-			<label for="img-4" class="next">&#x203a;</label>
-		</div>
-    </li>
-
-    <input type="radio" name="radio-btn" id="img-4" />
-    <li class="slide-container">
-        <div class="slide">
-         <!-- Should be user input !-->
-          <img src="http://i141.photobucket.com/albums/r48/thon_01_z/HDR%20Images/OverThereisover.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-3" class="prev">&#x2039;</label>
-			<label for="img-5" class="next">&#x203a;</label>
-		</div>
-    </li>
-
-    <input type="radio" name="radio-btn" id="img-5" />
-    <li class="slide-container">
-        <div class="slide">
-         <!-- Should be user input !-->
-          <img src="http://i414.photobucket.com/albums/pp225/dpepple100/High%20Dynamic%20Range%20HDR/NYCWoldTradeTowerMemorial2008x.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-4" class="prev">&#x2039;</label>
-			<label for="img-6" class="next">&#x203a;</label>
-		</div>
-    </li>
-
-    <input type="radio" name="radio-btn" id="img-6" />
-    <li class="slide-container">
-        <div class="slide">
-         <!-- Should be user input !-->
-          <img src="http://i104.photobucket.com/albums/m192/ESTIOS/HDR/HDR-Coteau.jpg" />
-        </div>
-		<div class="nav">
-			<label for="img-5" class="prev">&#x2039;</label>
-			<label for="img-1" class="next">&#x203a;</label>
-		</div>
-    </li>
-    <!-- Dots on Slider !-->
-    <li class="nav-dots">
-      <label for="img-1" class="nav-dot" id="img-dot-1"></label>
-      <label for="img-2" class="nav-dot" id="img-dot-2"></label>
-      <label for="img-3" class="nav-dot" id="img-dot-3"></label>
-      <label for="img-4" class="nav-dot" id="img-dot-4"></label>
-      <label for="img-5" class="nav-dot" id="img-dot-5"></label>
-      <label for="img-6" class="nav-dot" id="img-dot-6"></label>
-    </li>
-</ul></center>
-</div>
-<!-- Google Map !-->
-		<center>
-      <input id="address" type="textbox" value="Oakland, CA">
-      <input type="button" value="Geocode" onclick="codeAddress()">
+      </div>
     </div>
-    <div id="map-canvas"></div>
-</center>
 </div>
+</div>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html> 
