--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -2,7 +2,12 @@
 <html>
 <head>
 <!-- Link to external Bootstrap file -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
 		 <!-- Link to Stylesheet !-->
 		<link rel='stylesheet' href='/style.css'/>
 		<!-- Link to Google Fonts !-->
@@ -10,7 +15,7 @@
 		<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<h1>Edit <%= images.title %></h1>
+	<div class="page-header"><h1>Edit <%= images.title %></h1></div>
 	 <!-- Bootstrap Navbar -->
     <nav role="navigation" class="navbar navbar-default">
 
@@ -37,8 +42,13 @@
 
             <ul class="nav navbar-nav">
 
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="./logout">Logout</a></li>
+                <li><a href="/"> <button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button></a></li>
+                <li><form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+                <div class="form-group">
+                <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</button>
+                </div>
+                </form></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -57,5 +67,7 @@
 		<input type="text" name="title" placeholder="Title" value="<%= images.title %>"><br><br>
  		<button type="submit" class="btn btn-success btn-lg">Submit</button>
 	</form>
+    <!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
