--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -4,8 +4,13 @@
   <title>New Photo Post!</title>
    <!-- Link to Stylesheet !-->
   <link rel='stylesheet' href='/style.css'/>
-  <!-- Link to external Bootstrap file -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+ <!-- Link to external Bootstrap file -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
   <!-- Link to Google Fonts !-->
   <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
@@ -25,11 +30,14 @@ function initialize() {
     center: latlng
   }
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
 }
 // Geocodes Address
 function codeAddress() {
   var address = document.getElementById('address').value;
-  geocoder.geocode( { 'address': address}, function(results, status) {
+  geocoder.geocode( { 'address': address}, function(results
+  , status) {
+    console.log('results', results)
     if (status == google.maps.GeocoderStatus.OK) {
       map.setCenter(results[0].geometry.location);
       var marker = new google.maps.Marker({
@@ -40,10 +48,12 @@ function codeAddress() {
       alert('Geocode was not successful for the following reason: ' + status);
     }
   });
+
+  document.querySelector('#exampleInputLocation').value = address;
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
-google.maps.event.addEventListener(onclick, 'load', initialize);
+google.maps.event.addListener(onclick, 'load', initialize);
 </script>
 
 <script type="text/javascript">
@@ -87,25 +97,30 @@ window.getCoordinates = function (address, callback){
 
     <ul class="nav navbar-nav">
 
-      <li class="active"><a href="/">Home</a></li>
-      <li><a href="./logout">Logout</a></li>
+      <li>
+        <a href="/"> <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</button></a>
+      </li>
+      <li>
+        <a href="./showall"> <button type="button" class="btn btn-warning btn-lg">
+        <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>Show All Photos</button></a>
+      </li>
+      <li>
+        <form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+        <div class="form-group">
+        <button type="submit" class="btn btn-default btn-block">Log Out</button>
+      </div>
+        </form>
+      </li>
     </ul>
-  </li>
-
-  </ul>
-
-  </div>
 
   </nav>
   <form role="form" action="/posts" method="POST">
     <div class="form-group">
-    <!-- <label for="exampleInputFile"> Uploaded Image Source</label>
-    <input type="file" name="imagesource" id="exampleInputFile">
-    </div><br><br> -->
     <label for="exampleInputLocation">Image Source</label>
       <input type="text" class="form-control" name="imagesource" id="exampleInputImageSource" placeholder="Enter http location of image"><br><br>
       <label for="exampleInputLocation">Location</label>
-      <input type="text" class="form-control" name="location" id="exampleInputLocation" placeholder="Enter location"><br><br>
+      <input type="text" class="form-control" name="location" id="exampleInputLocation" placeholder="Enter location in Geocode Map!" readonly=""><br><br>
       <label for="exampleInputPhotoLocation">Title</label>
       <input type="text" class="form-control" name="title" id="exampleInputEmail1" placeholder="Enter title"><br><br>
       <button type="submit" class="btn btn-success btn-lg">Submit</button>
@@ -117,5 +132,7 @@ window.getCoordinates = function (address, callback){
       <input type="button" value="Geocode" onclick="codeAddress()">
     </div>
     <div id="map-canvas"></div>
+    <!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
