--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Link to external Bootstrap file -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<!-- Link to external Bootstrap file -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+>
 		 <!-- Link to Stylesheet !-->
 		<link rel='stylesheet' href='/style.css'/>
 		<!-- Link to Google Fonts !-->
@@ -39,7 +44,11 @@
             <ul class="nav navbar-nav">
 
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="./logout">Logout</a></li>
+                <li><form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+                <div class="form-group">
+                <button type="submit" class="btn btn-default btn-block">Log Out</button>
+                </div>
+                  </form></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -56,9 +65,10 @@
 			<p>Title: <%= images.title %></p>
 			<p><img src="<%= images.imagesource %>" />
 			<form method="POST" action="/posts/<%= images.id %>?_method=DELETE">
-			<a href="./posts/<%= images[0].id %>/edit"><input type="submit" value="delete" class="btn btn-primary btn-lg"></a>
-			 <input type="submit" value="delete" class="btn btn-danger btn-lg">
+			<a href="./posts/<%= images[0] %>/edit"><input type="submit" value="delete" class="btn btn-danger btn-lg"></a>
 			</form>
 			</div>
+            <!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	</body>
 </html>
