--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>Sign Up!</title>
-	<!-- Link to external Bootstrap file -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<!-- Link to external Bootstrap file -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
 	 <!-- Link to Stylesheet !-->
 	<link rel='stylesheet' href='/style.css'/>
 	<!-- Link to Google Fonts !-->
@@ -11,13 +16,44 @@
 	<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 	<body>
 	<h1>Sign Up!</h1>
+ <!-- Bootstrap Navbar -->
+    <nav role="navigation" class="navbar navbar-default">
 
-	<form name="signUp" method="POST" action="/users/signup">
+        <!-- Brand and toggle get grouped for better mobile display -->
+
+        <div class="navbar-header">
+
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+
+                <span class="sr-only">Toggle navigation</span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+                <span class="icon-bar"></span>
+
+            </button>
+        </div>
+
+        <!-- Collection of nav links and other content for toggling -->
+
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+
+            <ul class="nav navbar-nav">
+
+                <li><a href="/"> <button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button></a></li>
+
+    </nav>
+	<form name="signUp" method="POST" action="/signup">
 		<br><br>
-		<label> Create Username:<input type="text" name="username" autofocus></label><br><br>
-		<label>Create Password:<input type="password" name="password"></label><br><br>
+		<label> Create Username:<input type="text" name="name" placeholder="Case Sensitive!"autofocus></label><br><br>
+		<label>Create Password:<input type="password" name="password"placeholder="Case Sensitive!"></label><br><br>
 		<input type="submit" value="Submit"><br><br>
 	</form>
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
 
