--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,8 @@
 <head>
 <title>Home</title>
 <style type="text/css">
-  /*
+   /*
 
-* Based on Cover by https://twitter.com/mdo"  @mdo
-* added cover image and background color to match (green)
-*
 * Globals
 
 */
@@ -67,6 +64,7 @@ body {
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+  color: #fff;
 }
 
 /* Padding for spacing */
@@ -81,6 +79,7 @@ body {
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+  color: #fff;
 }
 
 .masthead-nav > li {
@@ -143,7 +142,9 @@ body {
   color: rgba(255,255,255,.5);
 }
 
-
+.lead {
+  color: #fff;
+}
 /*
  * Affix and center
  */
@@ -177,8 +178,9 @@ body {
     width: 700px;
   }
 }
-
 </style>
+
+
 <!-- Link to external Bootstrap file -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -186,15 +188,6 @@ body {
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-<!-- Link to Google Fonts !-->
-<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
-<!--Google Maps!-->
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-<meta charset="utf-8">
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-
-</head>
 <body>
 <div class="site-wrapper">
   <div class="site-wrapper-inner">
@@ -214,10 +207,11 @@ body {
                 </form>
             </li>
             <li>
-              <a href="./posts"> <button type="button" class="btn btn-info btn-lg">
-              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Posts</button></a></li>
-              <li>
-                <a href="./showall"> <button type="button" class="btn btn-warning btn-lg">
+              <a href="/posts"> <button type="button" class="btn btn-info btn-lg">
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Posts</button></a>
+            </li>
+            <li>
+                <a href="/show"> <button type="button" class="btn btn-warning btn-lg">
                 <span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Show All Photos</button>
                 </a>
               </li>
@@ -235,7 +229,7 @@ body {
       <div class="inner cover">
         <h1 class="cover-heading">Welcome...</h1>
 
-        <p class="lead">Photo Finder is an app that displays photographs from all over the world in a clean, simple format. Sign up and check some out or post photos of your own.</p>
+        <p class="lead">Photo Finder is an app that displays web hosted photographs from all over the world in a clean, simple format. Sign up and check some out or post photos of your own.</p>
 
         <p class="lead">
         <% if(user) { %>
@@ -250,25 +244,15 @@ body {
       <div class="mastfoot">
         <div class="inner">
           <!-- Validation -->
-
-          <p><a href=
-          "http://validator.w3.org/check?uri=http%3A%2F%2Fbootsnipp.com%2Fiframe%2Fg6GWQ"
-          target="_blank"><small>HTML</small><sup>5</sup></a></p>
-          
-          
-          <p><a href=
-          "https://github.com/twbs/bootlint"
-          target="_blank"><small>Checked with Bootlint</small></a></p>          
-      
-          
-
-          <p>© 2014 Nic Boutte ~ <a href=
-          "http://getbootstrap.com/">Bootstrap</a></p>
+          <p>© 2014 Nic Boutte</p>
         </div>
       </div>
     </div>
 </div>
 </div>
+<!-- jQuery !-->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
