--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -15,49 +15,61 @@
 		<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="page-header"><h1>Edit <%= images.title %></h1></div>
-	 <!-- Bootstrap Navbar -->
-    <nav role="navigation" class="navbar navbar-default">
+<div class="page-header"><h1>Edit <%= images.title %></h1></div>
+ <!-- Bootstrap Navbar -->
+<nav role="navigation" class="navbar navbar-default">
 
-        <!-- Brand and toggle get grouped for better mobile display -->
+    <!-- Brand and toggle get grouped for better mobile display -->
 
-        <div class="navbar-header">
+  <div class="navbar-header">
 
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+      <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
 
-                <span class="sr-only">Toggle navigation</span>
+          <span class="sr-only">Toggle navigation</span>
 
-                <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
 
-                <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
 
-                <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
 
-            </button>
+      </button>
+  </div>
+
+  <!-- Collection of nav links and other content for toggling -->
+
+  <div id="navbarCollapse" class="collapse navbar-collapse">
+
+    <ul class="nav navbar-nav">
+
+      <li>
+        <a href="/"> <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button>
+        </a>
+      </li>
+      <li>
+                <a href="/show"> <button type="button" class="btn btn-warning btn-lg">
+                <span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Show All Photos</button>
+                </a>
+              </li>
+      <li>
+        <form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+        <div class="form-group">
+        <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</button>
         </div>
+        </form>
+      </li>
+  </ul>
 
-        <!-- Collection of nav links and other content for toggling -->
+  <ul class="nav navbar-nav navbar-right">
+      <li>
+      	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
+          <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button>
+        </a>
+      </li>
+    </ul>
 
-        <div id="navbarCollapse" class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav">
-
-                <li><a href="/"> <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button></a></li>
-                <li><form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
-                <div class="form-group">
-                <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</button>
-                </div>
-                </form></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                	<a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg">
-  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button></a>
-            </ul>
-
-        </div>
+  </div>
 
     </nav>
 
