--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,60 +1,233 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sign Up!</title>
+    <title>Login</title>
 <!-- Link to external Bootstrap file -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+<style type="text/css">
+body
+{
+    background: url('http://i.imgur.com/tAHVmXi.jpg') fixed;
+    background-size: cover;
+    padding: 0;
+    margin: 0;
+}
 
-	 <!-- Link to Stylesheet !-->
-	<link rel='stylesheet' href='/style.css'/>
-	<!-- Link to Google Fonts !-->
-	<link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
-	<body>
-	<h1>Sign Up!</h1>
- <!-- Bootstrap Navbar -->
-    <nav role="navigation" class="navbar navbar-default">
+.wrap
+{
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+}
 
-        <!-- Brand and toggle get grouped for better mobile display -->
+p.form-title
+{
+    font-family: 'Open Sans' , sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top: 5%;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
 
-        <div class="navbar-header">
+form
+{
+    width: 250px;
+    margin: 0 auto;
+}
 
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+form.login input[type="text"], form.login input[type="password"]
+{
+    width: 100%;
+    margin: 0;
+    padding: 5px 10px;
+    background: 0;
+    border: 0;
+    border-bottom: 1px solid #FFFFFF;
+    outline: 0;
+    font-style: italic;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    color: #FFFFFF;
+    outline: 0;
+}
 
-                <span class="sr-only">Toggle navigation</span>
+form.login input[type="submit"]
+{
+    width: 100%;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-top: 16px;
+    outline: 0;
+    cursor: pointer;
+    letter-spacing: 1px;
+}
 
-                <span class="icon-bar"></span>
+form.login input[type="submit"]:hover
+{
+    transition: background-color 0.5s ease;
+}
 
-                <span class="icon-bar"></span>
+form.login .remember-forgot
+{
+    float: left;
+    width: 100%;
+    margin: 10px 0 0 0;
+}
+form.login .forgot-pass-content
+{
+    min-height: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+form.login label, form.login a
+{
+    font-size: 12px;
+    font-weight: 400;
+    color: #FFFFFF;
+}
 
-                <span class="icon-bar"></span>
+form.login a
+{
+    transition: color 0.5s ease;
+}
 
-            </button>
+form.login a:hover
+{
+    color: #2ecc71;
+}
+
+.pr-wrap
+{
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: none;
+}
+
+.show-pass-reset
+{
+    display: block !important;
+}
+
+.pass-reset
+{
+    margin: 0 auto;
+    width: 250px;
+    position: relative;
+    margin-top: 22%;
+    z-index: 999;
+    background: #FFFFFF;
+    padding: 20px 15px;
+}
+
+.pass-reset label
+{
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.pass-reset input[type="email"]
+{
+    width: 100%;
+    margin: 5px 0 0 0;
+    padding: 5px 10px;
+    background: 0;
+    border: 0;
+    border-bottom: 1px solid #000000;
+    outline: 0;
+    font-style: italic;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    color: #000000;
+    outline: 0;
+}
+
+.pass-reset input[type="submit"]
+{
+    width: 100%;
+    border: 0;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-top: 10px;
+    outline: 0;
+    cursor: pointer;
+    letter-spacing: 1px;
+}
+
+.pass-reset input[type="submit"]:hover
+{
+    transition: background-color 0.5s ease;
+}
+.posted-by
+{
+    position: absolute;
+    bottom: 26px;
+    margin: 0 auto;
+    color: #FFF;
+    background-color: rgba(0, 0, 0, 0.66);
+    padding: 10px;
+    left: 45%;
+}
+</style>
+<body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="pr-wrap">
+                <div class="pass-reset">
+                    <label>
+                        Enter the email you signed up with</label>
+                    <input type="email" placeholder=" Create Email" />
+                    <input type="submit" value="Submit" class="pass-reset-submit btn btn-success btn-sm" />
+                </div>
+            </div>
+            <div class="wrap">
+                <p class="form-title">
+                    Sign Up!</p>
+                <form name="login" method="POST" action="/users/signup">
+<br><br>
+<center><input type="text" name="username" placeholder="Username" autofocus><br><br>
+<input type="password" name="password" placeholder="Password"><br><br>
+<button type="submit" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Submit</button><br><br></center>
+</form>
+            </div>
         </div>
-
-        <!-- Collection of nav links and other content for toggling -->
-
-        <div id="navbarCollapse" class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav">
-
-                <li><a href="/"> <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button></a></li>
-
-    </nav>
-	<form name="signUp" method="POST" action="/signup">
-		<br><br>
-		<label> Create Username:<input type="text" name="name" placeholder="Case Sensitive!"autofocus></label><br><br>
-		<label>Create Password:<input type="password" name="password"placeholder="Case Sensitive!"></label><br><br>
-		<input type="submit" value="Submit"><br><br>
-	</form>
-	<!-- Latest compiled and minified JavaScript -->
+    </div>
+</div>
+<script src="jquery-1.11.1.min.js">
+    $(document).ready(function () {
+    $('.forgot-pass').click(function(event) {
+      $(".pr-wrap").toggleClass("show-pass-reset");
+    }); 
+    
+    $('.pass-reset-submit').click(function(event) {
+      $(".pr-wrap").removeClass("show-pass-reset");
+    }); 
+});
+</script>
+<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
