--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -150,5 +150,7 @@ $('.col-lg-3 img').on("click", function(){
 });
 
 </script>
+<!-- jQuery !-->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </body>
 </html>
