--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -79,6 +79,8 @@
 		<input type="text" name="title" placeholder="Title" value="<%= images.title %>"><br><br>
  		<button type="submit" class="btn btn-success btn-lg">Submit</button>
 	</form>
+  <!-- jQuery !-->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
