--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -136,6 +136,8 @@ window.getCoordinates = function (address, callback){
       <input type="button" value="Geocode" onclick="codeAddress()">
     </div>
     <div id="map-canvas"></div>
+    <!-- jQuery !-->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
