--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -208,7 +208,7 @@ form.login a:hover
             <div class="wrap">
                 <p class="form-title">
                     Log In</p>
-                <form name="login" method="POST" action="/login">
+                <form name="login" method="POST" action="/users/login">
 <br><br>
 <center><input type="text" name="username" placeholder="Username" autofocus><br><br>
 <input type="password" name="password" placeholder="Password"><br><br>
