--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
 body {
-    background-image: 
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/grid.png),
-    url(http://blog.fovitec.com/wp-content/uploads/2013/10/Film_strip.jpg);
-  background-blend-mode: color-burn;
-  background-size: 16px 16px, cover;
+    background-image: url(images/Film_strip.jpg);
+  background-color: red;
+  background-blend-mode: screen;
 }
 
 #map-canvas {
