--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,21 @@
   <!DOCTYPE html>
   <html>
   <head>
-    <title>Sidn Up</title>
+    <title>Login</title>
+    <!-- Link to Stylesheet !-->
+  <link rel='stylesheet' href='/styleLogin.css'/>
+
   <!-- Link to external Bootstrap file -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-  <!-- Link to Stylesheet !-->
-  <link rel='stylesheet' href='/styleSignup.css'/>
-
+  
+  <!-- jQuery !-->
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <body>
   <div class="container">
     <div class="row">
@@ -19,14 +24,14 @@
                 <div class="pass-reset">
                     <label>
                         Enter the email you signed up with</label>
-                    <input type="email" placeholder=" Create Email" />
+                    <input type="email" placeholder="Email" />
                     <input type="submit" value="Submit" class="pass-reset-submit btn btn-success btn-sm" />
                 </div>
             </div>
             <div class="wrap">
                 <p class="form-title">
-                    Sign Up!</p>
-                <form name="login" method="POST" action="/users/signup">
+                    Log In</p>
+                <form name="login" method="POST" action="/">
   <br><br>
   <center><input type="text" name="username" placeholder="Username" autofocus><br><br>
   <input type="password" name="password" placeholder="Password"><br><br>
@@ -47,9 +52,5 @@
     }); 
   });
   </script>
-  <!-- jQuery !-->
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body>
   </html>
