--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -64,59 +64,27 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </script>
 <!--                                                                                !-->
 <body>
- <!-- Bootstrap Navbar -->
-    <nav role="navigation" class="navbar navbar-default">
-
-        <!-- Brand and toggle get grouped for better mobile display -->
-
-        <div class="navbar-header">
-
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-
-                <span class="sr-only">Toggle navigation</span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-
-                <span class="icon-bar"></span>
-
-            </button>
-        </div>
-
-        <!-- Collection of nav links and other content for toggling -->
-
-        <div id="navbarCollapse" class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav">
-
-                <li><a href="/"> <button type="button" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</button></a></li>
-        
-                <li>
-              <a href="/posts"> <button type="button" class="btn btn-info btn-lg">
-              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Posts</button></a>
-            </li>
-                <li><form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
-                <div class="form-group">
-                <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</button>
-                </div>
-                </form></li>
-                
-               
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                
-                <li>
-                  <a href="./posts/new"><button type="button" class="btn btn-primary btn-lg">
-  <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Upload Photo</button></a></li>              
-              
-            </ul>
-
-        </div>
-
-    </nav>
+<!--  -->
+<ul class="nav nav-tabs">
+    <li class="active"><a href="/"> <button type="button" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home</button></a>
+    </li>
+    <li>
+      <a href="./posts/new"> <button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Upload Photo</button>
+      </a>
+    </li>
+    <li>
+      <a href="/posts"> <button type="button" class="btn btn-info btn-lg">
+      <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit Posts</button></a>
+    </li>
+    <li>
+      <form class="form" role="form" action ="/logout?_method=DELETE" method="POST" accept-charset="UTF-8" id="login-nav">
+      <div class="form-group">
+      <button type="submit" class="btn btn-default btn-block">Log Out</button>
+      </form>
+    </li>
+</ul>
+<!--  -->
 
 <!-- Pictures !-->
 <div class="container">
