--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
   <html>
   <head>
-    <title>Sidn Up</title>
+    <title>Sign Up</title>
   <!-- Link to external Bootstrap file -->
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
